# conduit

./: LICENSE  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
config/: conduit.example.yaml
config/pricing/: models.json
docker/: Dockerfile  docker-compose.yml
scripts/: dev-setup.sh  generate-key.py
src/conduit/: __init__.py  __main__.py  app.py  config.py
src/conduit/api/: deps.py
src/conduit/api/admin/: analytics.py  cache.py  deployments.py  guardrails.py  health.py  keys.py  prompts.py  router.py
src/conduit/api/middleware/: logging.py  request_id.py
src/conduit/api/v1/: chat.py  models.py  router.py
src/conduit/common/: crypto.py  errors.py  events.py  logging.py  streaming.py  tokens.py
src/conduit/core/auth/: api_key.py  rate_limiter.py
src/conduit/core/cache/: embedding.py  exact.py  manager.py  semantic.py
src/conduit/core/cost/: calculator.py  pricing.py
src/conduit/core/guardrails/: content_filter.py  custom.py  engine.py  injection.py  pii.py
src/conduit/core/prompts/: registry.py  template.py
src/conduit/core/router/: engine.py  health.py  strategies.py
src/conduit/db/: session.py
src/conduit/models/: __init__.py  api_key.py  audit_event.py  base.py  cache_entry.py  deployment.py  guardrail_rule.py  organization.py  prompt_template.py  request_log.py  team.py  user.py
src/conduit/providers/: anthropic.py  base.py  google.py  openai.py  registry.py
src/conduit/schemas/: analytics.py  cache.py  completion.py  deployments.py  guardrails.py  health.py  keys.py  prompts.py
src/conduit/services/: completion.py  deployment_service.py  guardrail_service.py  key_service.py
tests/: conftest.py  factories.py
tests/integration/: test_cache_flow.py  test_deployments.py  test_fallback.py  test_guardrails_flow.py  test_health.py  test_rate_limiting.py  test_streaming.py
tests/unit/core/: test_circuit_breaker.py  test_cost_calculator.py  test_guardrails.py  test_injection.py  test_pii.py  test_rate_limiter.py  test_router_engine.py  test_semantic_cache.py
tests/unit/providers/: test_anthropic_adapter.py  test_google_adapter.py  test_openai_adapter.py
