[project]
name = "conduit-llm"
version = "0.1.0"
description = "A security-first, self-hosted LLM gateway and proxy"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "Sagar Shirwalkar" }]
keywords = ["llm", "gateway", "proxy", "openai", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "sqlalchemy[asyncio]>=2.0.36,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "alembic>=1.14.0,<2.0.0",
    "redis[hiredis]>=5.2.0,<6.0.0",
    "httpx>=0.28.0,<1.0.0",
    "tiktoken>=0.8.0,<1.0.0",
    "cryptography>=44.0.0,<45.0.0",
    "structlog>=24.4.0,<25.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "orjson>=3.10.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "httpx>=0.28.0,<1.0.0",
    "factory-boy>=3.3.0,<4.0.0",
    "faker>=33.0.0,<34.0.0",
    "aiosqlite>=0.20.0,<1.0.0",
    "mypy>=1.13.0,<2.0.0",
    "ruff>=0.8.0,<1.0.0",
    "pre-commit>=4.0.0,<5.0.0",
    "respx>=0.22.0,<1.0.0",
]

[project.scripts]
conduit = "conduit.__main__:main"

[project.urls]
Homepage = "https://github.com/sagar-shirwalkar/conduit"
Documentation = "https://github.com/sagar-shirwalkar/conduit/tree/main/docs"
Repository = "https://github.com/sagar-shirwalkar/conduit"
Issues = "https://github.com/sagar-shirwalkar/conduit/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/conduit"]

# Ruff
[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["conduit"]

# Mypy
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["asyncpg.*", "redis.*", "tiktoken.*"]
ignore_missing_imports = true

# Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests (no I/O)",
    "integration: Integration tests (requires DB)",
    "e2e: End-to-end tests (requires Docker)",
]

# Coverage
[tool.coverage.run]
source = ["src/conduit"]
omit = ["src/conduit/db/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
    "@abstractmethod",
]